--- a/package.xml
+++ b/package.xml
@@ -17,18 +17,21 @@
   <author email="jhowland@whoi.edu">Jon Howland</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>gazebo</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>xacro</build_depend>
   <build_depend>ds_msgs</build_depend>
-  <build_export_depend>gazebo</build_export_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_export_depend>gazebo_ros</build_export_depend>
   <build_export_depend>xacro</build_export_depend>
   <build_export_depend>ds_msgs</build_export_depend>
-  <exec_depend>gazebo</exec_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>roscpp</build_export_depend>
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>xacro</exec_depend>
   <exec_depend>ds_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
   <exec_depend>ros-kinetic-joystick-drivers</exec_depend>
 
 
