--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>ds_multibeam_msgs</build_depend>
   <build_depend>eigen</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>protobuf-dev</build_depend>
@@ -31,6 +32,7 @@
   <build_export_depend>xacro</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>ds_multibeam_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>eigen</build_export_depend>
   <build_export_depend>tf</build_export_depend>
@@ -39,6 +41,7 @@
   <exec_depend>xacro</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>ds_multibeam_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>joy</exec_depend>
   <exec_depend>tf</exec_depend>
