Adding authors to package.xml in preparation for open sourcing.

--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
 
   <url type="repository">https://bitbucket.org/whoidsl/ds_sim</url> -->
 
+  <author email="ivaughn@whoi.edu">Ian Vaughn</author>
   <author email="ssuman@whoi.edu">Stefano Suman</author>
   <author email="zberkowitz@whoi.edu">Zac Berkowitzh</author>
   <author email="jvaccaro@whoi.edu">Jennifer Vaccaro</author>
