--- a/package.xml
+++ b/package.xml
@@ -52,14 +52,17 @@
   <build_depend>ds_core_msgs</build_depend>
   <build_depend>ds_sensor_msgs</build_depend>
   <build_depend>ds_nav_msgs</build_depend>
+  <build_depend>dave_gazebo_world_plugins</build_depend>
   <build_export_depend>ds_actuator_msgs</build_export_depend>
   <build_export_depend>ds_core_msgs</build_export_depend>
   <build_export_depend>ds_sensor_msgs</build_export_depend>
   <build_export_depend>ds_nav_msgs</build_export_depend>
+  <build_export_depend>dave_gazebo_world_plugins</build_export_depend>
   <exec_depend>ds_actuator_msgs</exec_depend>
   <exec_depend>ds_core_msgs</exec_depend>
   <exec_depend>ds_sensor_msgs</exec_depend>
   <exec_depend>ds_nav_msgs</exec_depend>
+  <exec_depend>dave_gazebo_world_plugins</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
