--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>BSD</license>
 
-  <url type="repository">https://bitbucket.org/whoidsl/ds_sim</url> -->
+  <url type="repository">https://bitbucket.org/whoidsl/ds_sim</url>
 
   <author email="ivaughn@whoi.edu">Ian Vaughn</author>
   <author email="ssuman@whoi.edu">Stefano Suman</author>
